--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-
 header{
     padding: 0px 10px;
+}
+header h1{
+    font-family: 'Roboto Condensed', sans-serif;
 }
 body{
     background-color: #EEEEF0;
