--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     margin: 0;
+    background-color: #EEEEF0;
 }
 header{
     padding: 0px 10px;
@@ -9,30 +10,50 @@ header h1{
     font-size: 40px;
     letter-spacing: 2px;
 }
-body{
-    background-color: #EEEEF0;
+.icon{
+    position: absolute;
+    right: 20px;
+    top: 25px;
 }
-canvas{
+.icon_color{
+    color: #333333;
+}
+#main{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+#somcanvas{
     background-color: #FFFFFF;
     border: solid 1px #777777;
-    float: left;
-    margin: 10px;
+    margin: 10px auto;
+    width: 55%;
+    min-width: 450px;
 }
 #rightbox{
-    float: left;
-    width: 410px;
+    width: 40%;
+    min-width: 450px;
+    margin: 10px auto;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 #data{
-    margin: 10px;
+    width: 100%;
+    box-sizing: border-box;
+    margin : 0 auto;
     padding: 20px;
     background-color: #FFFFFF;
     border: solid 1px #777777;
 }
 #buttons{
-    margin: 10px;
+    margin: 10px auto;
+    max-width: 400px;
+    display: flex;
+    flex-wrap: wrap;
 }
 .button {
-    display: inline-block;
+    /* display: inline-block; */
     text-align: center;
     background-image: linear-gradient(#eaeaea 0%, #c6c6c6 100%);
     box-shadow: inset 0 2px 0 rgba(255,255,255,0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
@@ -44,23 +65,13 @@ canvas{
     padding: 12px 0px;
     border-radius: 4px;
     font-size: 16px;
-    margin: 10px;
-    width: 150px;
+    margin: 10px auto;
+    width: 40%;
+    min-width: 150px;
 }
 /* ボタンにカーソルを置いた時 */
 .button:hover {
     opacity: 0.8;
-}
-.icon{
-    position: absolute;
-    right: 20px;
-    top: 25px;
-}
-.icon_color{
-    color: #333333;
-}
-#main{
-    overflow:hidden;
 }
 footer{
     box-sizing: border-box;
