--- a/style.css
+++ b/style.css
@@ -28,7 +28,9 @@ header h1{
     border: solid 1px #777777;
     margin: 10px auto;
     width: 55%;
+    height: auto;
     min-width: 400px;
+/*     min-height: 400px; */
 }
 #rightbox{
     width: 40%;
