--- a/style.css
+++ b/style.css
@@ -30,12 +30,12 @@ header h1{
     margin: 10px auto;
     width: 55%;
     height: auto;
-/*     min-width: 400px; */
+    min-width: 300px;
     min-height: 350px;
 }
 #rightbox{
     width: 40%;
-/*     min-width: 400px; */
+    min-width: 300px;
     margin: 10px auto;
     display: flex;
     flex-direction: column;
