--- a/style.css
+++ b/style.css
@@ -29,8 +29,13 @@ header h1{
     border: solid 1px #777777;
     margin: 10px auto;
     width: 55%;
-    height: auto;
+/*     height: auto; */
     min-width: 370px;
+    &:before {
+       content: "";
+       display: block;
+       padding-top: 75%;
+    }
 }
 #rightbox{
     width: 40%;
