--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ header h1{
     border: solid 1px #777777;
     margin: 10px auto;
     width: 55%;
+    min-width: 380px;
 }
 #rightbox{
     width: 40%;
